Commented scrollbar-fix

--- a/styles/scss/_default.scss
+++ b/styles/scss/_default.scss
@@ -5,10 +5,10 @@
   margin: 0;
   padding: 0;
   background-color: #24252a;
-  font-family: "Signika Negative";
+  font-family: "Signika Negative", serif;
   color: white;
   text-decoration: none;
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  //::-webkit-scrollbar {
+  //  display: none;
+  //}
 }
